# travelpost

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: ci.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/run-script-with-cache/: action.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml
src/travelpost/: __init__.py  icloud-downloader.py  icloud_downloader.py  icon_creator.py
src/travelpost/readers/: __init__.py  abc.py  directory.py  excel.py  exif_tool.py  file.py  heic.py  metadata.py  mov.py  utils.py
src/travelpost/readers/fp/: __init__.py  __main__.py  interface.py  types_.py
src/travelpost/readers/fp/gpx_parser/: __init__.py
src/travelpost/readers/fp/html_parser/: __init__.py  article.py  blog.py  insights.py  page.py
src/travelpost/readers/fp/utils/: __init__.py  delay.py  not_set.py  requests.py  url.py
src/travelpost/readers/interface/: __init__.py  md.py
src/travelpost/readers/photo_video/: __init__.py  directory.py  excel.py  file.py  heic.py  interface.py  mov.py
src/travelpost/readers/photo_video/interface/: __init__.py
src/travelpost/readers/ps/: __init__.py  __main__.py  interface.py
src/travelpost/readers/route/: gpx.py  interface.py
src/travelpost/utils/: dataclass_json_mixin.py  dataclass_tz_mixin.py  download_file.py
src/travelpost/utils/thumbnails/: __init__.py  image.py  video.py
src/travelpost/writers/: __init__.py  directory.py  excel.py  file.py  geojson.py  gpx.py
src/travelpost/writers/fpdf/: fonts.py  styles.py
src/travelpost/writers/fpdf/lib/: __init__.py  color.py  drawing.py  enums.py  font_awesome.py  fonts.py  margin_padding.py  pdf.py  str_utils.py  style.py
src/travelpost/writers/fpdf/pages/: abc.py  back_cover.py  front_cover.py  (+3 more)
src/travelpost/writers/interface/: __init__.py  abc.py
src/travelpost/writers/map/: __init__.py  __main__.py  fa_icon.py  interface.py  map.py  map_print.py  patch.py  png.py  point_of_interest.py  post_icon.py  standalone_tooltip.py  text_path.py  tile_loading_control.py  travel_segment.py  units.py  utils.py
src/travelpost/writers/pdf/: __init__.py  book.py  header_footer.py  styles.py  table_styles.py
tests/ps_test/: ps_test.py
tests/ps_test/data/user/: user.json
tests/readers/ps_test/: __init__.py
tests/writers/: __init__.py  apple_color_emoji_test.py  conftest.py  country_shapes_test.py  flag_icons_test.py  fontawesome_test.py  map_test.py  noto_color_emoji_test.py  pdf_test.py  svglib_test.py
tests/writers/data/: SOURCES.md  o_henry_the_gift_of_the_magi.txt
tests/writers/data/apple_color_emoji/: emoji.json
tests/writers/data/country_shapes/: country.json
tests/writers/data/flag_icons/: country.json
tests/writers/data/noto_color_emoji/: emoji.json
tests/writers/map/: README.md  __init__.py  conftest.py  map_test.py
tests/writers/pdf/: conftest.py  country_shapes_test.py  emoji_test.py
(+136 files in other folders)
