[project]
name = "travel-post"
version = "0.1.0"
description = "ETL for photos, videos and gpx of a travel."
readme = "README.md"
authors = [
    { name = "Corvin Lasogga", email = "c.lasogga@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
travel-post = "travel_post:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

