[project]
name = "travelpost"
version = "0.1.0"
description = "ETL for photos, videos and gpx of a travel."
readme = "README.md"
authors = [
    { name = "Corvin Lasogga", email = "c.lasogga@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "geopandas>=1.1.1",
    "gpxpy>=1.6.2",
    "opencv-python-headless>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "pyexiftool>=0.5.6",
    "pyicloud",
    "pytest>=9.0.2",
    "shapely>=2.1.2",
    "tzfpy[tzdata]>=1.1.0",
    "tzlocal>=5.3.1",
]

[project.scripts]
icloud-downloader = "travelpost.icloud_downloader:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
fixable = ["ALL"]
unfixable = []

# Source: https://github.com/PyCQA/isort/blob/main/isort/profiles.py#L22
[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = true
force-sort-within-sections = true
# lexicographical = true
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]
order-by-type = false
# group-by-package = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.uv.sources]
pyicloud = { git = "https://github.com/CoLa5/pyicloud", rev = "20fdcc84888e8a30c976f18cabe338b2ccf00177" }
